--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel": "^4.5.3",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "next": "11.1.2",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "theme-ui": "^0.11.1",
+    "typeface-barlow-condensed": "^1.1.13",
+    "typeface-give-you-glory": "^1.1.13",
+    "typeface-noto-sans": "^1.1.13",
+    "typeface-open-sans": "^1.1.13",
+    "typeface-roboto": "^1.1.13",
+    "typeface-teko": "^1.1.13"
   },
   "devDependencies": {
+    "@iconify/react": "^3.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2"
   }
